force-app/main/default/objects/breg_Agent_Search_List__c/breg_Agent_Search_List__c.object-meta.xml
<CustomObject>
    <label>Agent Search List</label>
    <nameField>
        <displayFormat>ASL-{0000}</displayFormat>
        <label>Agent Search List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Search Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>