force-app/main/default/objects/breg_Agent_Search_List__c/fields/breg_Agent_Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>breg_Agent_Account_Ids__c</fullName>
    <label>Agent Account Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>