force-app/main/default/objects/breg_Agent_Search_List__c/fields/breg_Agents_JSON__c.field-meta.xml
<CustomField>
    <fullName>breg_Agents_JSON__c</fullName>
    <label>Agents JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>