force-app/main/default/objects/breg_Agent_Search_List__c/fields/breg_DocuSign_Formatted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>breg_DocuSign_Formatted_Date_Time__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(TEXT(DATETIMEVALUE(CreatedDate)), &quot;:&quot;, &quot;-&quot;), &quot;Z&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSign Formatted Date Time</label>
    <type>Text</type>
</CustomField>