force-app/main/default/objects/breg_Agent_Search_List__c/fields/breg_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>