force-app/main/default/objects/breg_Agent_Search_List__c/fields/breg_Search_Value__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_Value__c</fullName>
    <label>Search Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>