force-app/main/default/objects/breg_Agent_Search_List__c/fields/breg_Total_Agent_Records__c.field-meta.xml
<CustomField>
    <fullName>breg_Total_Agent_Records__c</fullName>
    <label>Total Agent Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>