force-app/main/default/objects/breg_Agent_Search_List__c/fields/breg_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>breg_Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>